// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseModal component correctly 1`] = `
<div>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    className="modal"
    closeTimeoutMS={200}
    contentLabel="Selected Expense"
    isOpen={true}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <h1
      className="modal__title"
    >
      Delete
    </h1>
    <p
      className="modal__message"
    >
      Are you sure do you want to delete this expense? 
    </p>
    <div
      className="modal__buttons"
    >
      <button
        className="cancelButton"
        onClick={[Function]}
      >
        Cancel
      </button>
        
      <button
        className="deleteButton"
        onClick={[Function]}
      >
        Delete
      </button>
    </div>
  </Modal>
</div>
`;

exports[`should render ExpenseModal component with default 1`] = `
<div>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    className="modal"
    closeTimeoutMS={200}
    contentLabel="Selected Expense"
    isOpen={false}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <h1
      className="modal__title"
    >
      Delete
    </h1>
    <p
      className="modal__message"
    >
      Are you sure do you want to delete this expense? 
    </p>
    <div
      className="modal__buttons"
    >
      <button
        className="cancelButton"
        onClick={[Function]}
      >
        Cancel
      </button>
        
      <button
        className="deleteButton"
        onClick={[Function]}
      >
        Delete
      </button>
    </div>
  </Modal>
</div>
`;
